# vsna

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  init_boost.bat  init_boost.sh  vcpkg_build.ps1
client/: Cargo.toml  __config__.json  client.cpp  client.h  main.cpp
client/menu/: menu.cpp  menu.h
client/src/: config.rs  main.rs
client/src/utils/: client_cli.rs  client_connect.rs  command_handler.rs  file_handler.rs  filepack.rs  mod.rs  ws.rs
common/addr/: addr.cpp  addr.h
common/config/: config.cpp  config.h
core/: main.cpp
cpp_server/: CMakeLists.txt
cpp_server/server/: __config__.example.json  config.cpp  config.h  main.cpp
cpp_server/server/config/: config.cpp  config.h
hdrs/: server.h
rs_server/: Cargo.toml
rs_server/src/: client.rs  config.rs  dir_handler.rs  host.rs  main.rs  structs.rs
server/: Cargo.toml  __config__.example.json  __config__.json  main.cpp  server.cpp  server.h
server/config/: config.cpp  config.h
server/hdrs/: listener.h  server.h  session.h
server/src/: config.rs  main.rs  ws.rs
server/src/utils/: commands.rs  file_handler.rs  file_message.rs  filepack.rs  mod.rs  ws.rs
server/srcs/: listener.cpp  main.cpp  server.cpp  session.cpp
src/: client.cpp  server.cpp
srcs/: main.cpp  server.cpp
