[package]
name = "rs_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.43"
dotenv = "0.15.0"
futures = "0.3.31"
lazy_static = "1.5.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
walkdir = "2.5.0"
